Preparando terreno para django

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,4 @@ services:
     ports:
       - 8080:80
     volumes:
-      - ./app:/app
-    depends_on:
-      - banco
+      - .:/home/python/app
